feat: add UI components including Skeleton, Slider, Sonner, Switch, Table, Tabs, Textarea, Toggle Group, Toggle, Tooltip, and utility functions
- Implemented Skeleton component for loading states.
- Added Slider component with customizable min, max, and value props.
- Integrated Sonner for toast notifications with theme support.
- Created Switch component for toggle functionality.
- Developed Table component with header, body, footer, and cell components.
- Introduced Tabs component for tabbed navigation.
- Added Textarea component for multi-line text input.
- Implemented Toggle Group and Toggle components for grouped toggle functionality.
- Created Tooltip component for displaying additional information on hover.
- Added utility functions for class name management and mobile detection.
- Included mock data and types for chat functionality.
- Set up main entry point and styles for the application.
- Configured Vite for development with React and Tailwind CSS.

--- a/db/README
+++ b/db/README
@@ -118,6 +118,27 @@ Communication App that does the following:
 - Stakeholder A talks to Stakeholder B about current shipping process
     - While talking, information is updated in the database
 - Stakeholder A initiates Document A to be filled out automatically
+
+***
+
+## Running the backend (uvicorn)
+
+From the repo root:
+
+- Ensure `db/.env` exists and contains `DATABASE_URL=...`
+- Start the API:
+    - `uvicorn db.api:my_app --reload --port 8000`
+
+## Example API requests
+
+- Health:
+    - `curl -s http://127.0.0.1:8000/health`
+
+- Create role:
+    - `curl -s -X POST http://127.0.0.1:8000/roles -H 'Content-Type: application/json' -d '{"role_name":"admin","description":"Admin role"}'`
+
+- Create document (JSONB fields):
+    - `curl -s -X POST http://127.0.0.1:8000/documents -H 'Content-Type: application/json' -d '{"name":"Shipment Doc","text":"example","fields":{"shipment":{"container_number":"ABCD1234567"},"flags":{"hazmat":false},"cargo":[{"sku":"SKU-001","qty":120}]}}'`
     - Information is retrieved in three manners: 
         - Database/Stored information from conversation
         - Database connection by either Stakeholder A or Stakeholder B
